--- a/css/index.css
+++ b/css/index.css
@@ -245,6 +245,11 @@ input[type=submit].disabled {
 	transition: opacity 200ms;
 	opacity: 1;
 }
+
+.authors-list .page {
+	position: relative;
+}
+
 .moreImages {
 	display: inline-block;
 	vertical-align: top;
