--- a/css/index.css
+++ b/css/index.css
@@ -196,19 +196,19 @@ input::-moz-focus-inner {
 	word-spacing: normal;
 	vertical-align: top;
 }
-.b-author {
+.b-images {
 	padding: 2px 8px 8px;
 	border-bottom: 3px solid #ddd;
 }
-.b-author.m-active {
+.b-images.m-active {
 	background: #f0f0f0;
 	border-bottom-color: #6cf;
 }
-.b-author .actions {
+.b-images-actions {
 	float: right;
 	margin: 8px 2px;
 }
-.b-author .number {
+.b-images-number {
 	display: inline-block;
 	margin-right: 4px;
 	min-width: 30px;
@@ -217,42 +217,42 @@ input::-moz-focus-inner {
 	background: #ddd;
 	border-radius: 4px;
 }
-.b-images {
+.b-images-list {
 	display: inline;
 	margin: 0;
 	padding: 0;
 }
-.b-images > * {
+.b-images-list > * {
 	position: relative;
 	margin-right: 3px;
 	margin-bottom: 3px;
 }
-.b-images img {
+.b-images-list img {
 	display: block;
 	min-width: 24px;
 	height: 120px;
 	background: #ddd;
 }
 
-.b-images .selected {
+.b-images-list .selected {
 	background: #36c;
 	outline: 3px solid #36c;
 }
-.b-images .selected img {
+.b-images-list .selected img {
 	opacity: .7;
 }
-.b-author.m-active .b-images .cursor {
+.b-images.m-active .b-images-list .m-cursor {
 	position: relative;
 	background: #6cf;
 	outline: 5px solid #6cf;
 	z-index: 1;
 }
-.b-images .showInGallery {
+.b-images-list .m-showInGallery {
 	overflow: hidden;
 	position: relative;
 	display: block;
 }
-.b-images .showInGallery:before {
+.b-images-list .m-showInGallery:before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -261,7 +261,7 @@ input::-moz-focus-inner {
 	height: 100%;
 	box-shadow: 0 0 10px rgba(0,0,0,.5) inset;
 }
-.b-images .showInGallery:after {
+.b-images-list .m-showInGallery:after {
 	content: attr(data-galleries);
 	display: block;
 	position: absolute;
@@ -275,17 +275,17 @@ input::-moz-focus-inner {
 	background: rgba(0,0,0,.5);
 	opacity: 0;
 }
-.b-images li:hover .showInGallery:before {
+.b-images-list li:hover .m-showInGallery:before {
 	transition: opacity .5s;
 	opacity: 0;
 }
-.b-images li:hover .showInGallery:after {
+.b-images-list li:hover .m-showInGallery:after {
 	transition: bottom 300ms, opacity 700ms;
 	transition-delay: 500ms;
 	bottom: 0;
 	opacity: 1;
 }
-.b-images .similar {
+.b-images-list .m-similar {
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -300,21 +300,21 @@ input::-moz-focus-inner {
 	text-shadow: 0 0 2px black;
 	z-index: 2;
 }
-.b-images .similar:after {
+.b-images-list .m-similar:after {
 	content: '\223C';
 }
-.b-images li:hover .similar {
+.b-images-list li:hover .m-similar {
 	transition: opacity 200ms;
 	opacity: 1;
 }
-.b-images li .similar:hover {
+.b-images-list li .m-similar:hover {
 	background: rgba(0,0,0,.5);
 	transition: background 500ms;
 	border-left: 1px solid rgba(255,255,255,.5);
 	border-bottom: 1px solid rgba(255,255,255,.5);
 	border-bottom-left-radius: 2px;
 }
-.b-images .update {
+.b-images-list .m-update {
 	position: absolute;
 	bottom: 0;
 	right: 0;
@@ -327,19 +327,19 @@ input::-moz-focus-inner {
 	opacity: 0;
 	z-index: 2;
 }
-.b-images .update:after {
+.b-images-list .m-update:after {
 	content: '\270E';
 }
-.b-images li:hover .update {
+.b-images-list li:hover .m-update {
 	transition: opacity 300ms;
 	opacity: 1;
 }
 
-.authors-list .page {
+.b-pages-item {
 	position: relative;
 }
 
-.moreImages {
+.m-moreImages {
 	display: inline-block;
 	vertical-align: top;
 	padding: 50px 0;
@@ -351,12 +351,12 @@ input::-moz-focus-inner {
 	background: #ccc;
 	box-shadow: inset 0 0 10px #999;
 }
-.moreImages:hover {
+.m-moreImages:hover {
 	color: #666;
 	box-shadow: none;
 }
 
-.showMore {
+.i-showMore {
 	margin: 12px 0;
 }
 
@@ -425,7 +425,7 @@ input::-moz-focus-inner {
 	background: #ddd;
 }
 
-.updateControl {
+.b-updateControl {
 	display: none;
 	position: absolute;
 	z-index: 10;
@@ -436,10 +436,10 @@ input::-moz-focus-inner {
 	border: 1px solid #999;
 	box-shadow: 0 2px 4px rgba(0,0,0,.5);
 }
-.updateControl.show {
+.b-updateControl.show {
 	display: block;
 }
-.updateControl:before {
+.b-updateControl:before {
 	content: '';
 	position: absolute;
 	top: -18px;
@@ -447,7 +447,7 @@ input::-moz-focus-inner {
 	border: 9px solid transparent;
 	border-bottom-color: #999; 
 }
-.updateControl:after {
+.b-updateControl:after {
 	content: '';
 	position: absolute;
 	top: -16px;
@@ -455,7 +455,7 @@ input::-moz-focus-inner {
 	border: 8px solid transparent;
 	border-bottom-color: white; 
 }
-.updateControl .closeButton {
+.b-updateControl .closeButton {
 	position: absolute;
 	top: 4px;
 	right: 4px;
@@ -465,14 +465,14 @@ input::-moz-focus-inner {
 	text-align: center;
 	color: #999;
 }
-.updateControl .closeButton:after {
+.b-updateControl .closeButton:after {
 	content: '\2716';
 }
-.updateControl .checkboxes {
+.b-updateControl .checkboxes {
 	-webkit-columns: 2 90px;
 	-moz-columns: 2 90px;
 	columns: 2 90px;
 }
-.updateControl .checkboxes label:hover {
+.b-updateControl .checkboxes label:hover {
 	background: #eee;
 }
