--- a/css/index.css
+++ b/css/index.css
@@ -1,529 +1,11 @@
-html {
-	font: 13px Arial, sans-serif;
-	color: #333;
-}
-body {
-	margin: 0;
-}
-
-a {
-	text-decoration: none;
-	color: #49e;
-}
-a:hover {
-	color: #27c;
-}
-a.active {
-	color: #999;
-}
-h3 {
-	margin: 8px 0;
-	color: #666;
-}
-input {
-	font: inherit;
-	vertical-align: middle;
-}
-input[type=text] {
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	margin: 0;
-	padding: 3px;
-	padding-right: 22px;
-	width: 100%;
-	min-height: 2em;
-	font: inherit;
-	color: #444;
-	border: 1px solid #bfbfbf;
-	border-radius: 2px;
-	outline: none;
-}
-input[type=text]:focus {
-	border-color: rgb(77, 144, 254);
-	outline: none;
-	transition: border-color 200ms;
-}
-input[type=checkbox] {
-	margin: 0;
-	vertical-align: text-bottom;
-}
-input[type=radio] {
-	margin: 0 0 0 4px;
-}
-.m-button,
-input[type=submit] {
-	display: inline-block;
-	padding: 4px 12px;
-	line-height: 1.15;
-	color: #444;
-	background: #ededed;
-	background: linear-gradient(to bottom, #ededed, #ededed 38%, #dedede);
-	border: 1px solid rgba(0, 0, 0, .25);
-	border-radius: 2px;
-	box-shadow: 0 1px 0 rgba(0, 0, 0, .08), inset 0 1px 2px rgba(255, 255, 255, .75);
-	text-shadow: 0 1px 0 #f0f0f0;
-	cursor: default;
-}
-.m-button:hover,
-input[type=submit]:hover {
-	color: black;
-	background-image: linear-gradient(to bottom, #f0f0f0, #f0f0f0 38%, #e0e0e0);
-	border-color: rgba(0, 0, 0, .3);
-	box-shadow: 0 1px 0 rgba(0, 0, 0, .12), inset 0 1px 2px rgba(255, 255, 255, .95);
-}
-.m-button:active,
-input[type=submit]:active {
-	background-image: linear-gradient(to bottom, #e7e7e7, #e7e7e7 38%, #d7d7d7);
-	box-shadow: none;
-	text-shadow: none;
-}
-.m-button:focus,
-input[type=submit]:focus {
-	transition: border-color 200ms;
-	border-color: rgb(77, 144, 254);
-	outline: none;
-}
-.m-button.disabled,
-input[type=submit].disabled {
-	color: #aaa;
-	background-image: linear-gradient(to bottom, #f1f1f1, #f1f1f1 38%, #e6e6e6);
-	border-color: rgba(80, 80, 80, .2);
-	box-shadow: 0 1px 0 rgba(80, 80, 80, .08), inset 0 1px 2px rgba(255, 255, 255, .75);
-}
-input::-moz-focus-inner {
-	border: none;
-}
-.m-down {
-	padding-right: 8px;
-}
-.m-down:after {
-	content: '\25BC';
-	margin-left: 6px;
-	font-size: 0.8em;
-	color: #666;
-}
-.clearInput {
-	display: inline-block;
-	vertical-align: top;
-	width: 18px;
-	height: 2em;
-	line-height: 2.1em;
-	margin-left: -18px;
-	color: #ccc;
-}
-.clearInput:before {
-	content: '\2716';
-}
-.clearInput:hover {
-	color: #999;
-}
-.checkboxes {
-	margin-bottom: 10px;
-}
-.checkboxes label {
-	overflow: hidden;
-	display: block;
-	padding: 4px;
-}
-.checkboxes label:hover {
-	background: #fff;
-	border-radius: 2px;
-}
-.checkboxes .controls {
-	font-size: smaller;
-	margin-bottom: 4px;
-}
-.checkboxes .actions {
-	float: right;
-	margin-left: 3px;
-	font-size: 0.8em;
-	color: #666;
-}
-.checkboxes .actions a {
-	display: inline-block;
-	padding: 6px 6px 5px;
-	background: #eee;
-}
-.checkboxes .actions a:hover {
-	background: #ddd;
-}
-.row {
-	margin: 8px 0;
-	white-space: nowrap;
-}
-.row.actions {
-	margin-top: 12px;
-}
-.row.b-inline {
-	margin-right: -4px;
-}
-.row.b-inline label,
-.row.b-inline input[type=text],
-.row.b-inline select {
-	display: inline-block;
-	vertical-align: middle;
-	width: 80px;
-}
-.row.b-inline label {
-	margin-right: 4px;
-	width: 76px;
-	text-align: right;
-}
-
-.pull-right {
-	float: right;
-}
-
-.l-sidebar {
-	position: fixed;
-	overflow-x: hidden;
-	overflow-y: auto;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	padding: 8px 16px;
-	width: 160px;
-	background: #eee;
-	background-image: linear-gradient(to right, #eee 96%, #ddd);
-	/*border-right: 1px solid #d0d0d0;*/
-}
-.l-sidebar > form {
-	width: 160px;
-}
-.l-sidebar .b-form-legend {
-	margin: 12px 0;
-	margin-right: -16px;
-	font-weight: bold;
-	font-size: 1.17em;
-	color: #666;
-	border-bottom: 3px solid #ddd;
-	cursor: pointer;
-}
-.l-sidebar .b-form-fieldset {
-	/*overflow: hidden;*/
-	display: none;
-}
-.l-sidebar .b-form-legend.m-open + .b-form-fieldset {
-	display: block;
-}
-.l-sidebar input[type=submit] {
-	width: 100%;
-}
-.l-sidebar input.exclude {
-	float: right;
-	margin: 5px 5px 0;
-}
-.l-sidebar input.exclude:checked + label {
-	color: #666;
-	text-decoration: line-through;
-}
-.l-sidebar input.exclude:checked + label input {
-	opacity: .4;
-}
-.l-sidebar select {
-	width: 100%;
-}
-
-.l-sidebar + .l-content {
-	margin-left: 192px;
-}
-
-.b-inline {
-	letter-spacing: -0.31em; /* webkit: collapse white-space between units */
-	*letter-spacing: normal; /* reset IE < 8 */
-	/*word-spacing: -0.43em; /* IE < 8 && gecko: collapse white-space between units */
-}
-.b-inline > * {
-	display: inline-block;
-	*display: inline; *zoom: 1; /* IE < 8: fake inline-block */
-	letter-spacing: normal;
-	word-spacing: normal;
-	vertical-align: top;
-}
-
-.b-pages-head,
-.b-pages-foot {
-	margin: 6px 12px;
-}
-
-.b-images {
-	padding: 2px 12px 12px;
-	border-bottom: 3px solid #ddd;
-	/*box-shadow: 0 0 5px rgba(0,0,0,.1) inset;*/
-}
-.b-images.m-active {
-	background: #e6f0f3;
-	border-bottom-color: #6cf;
-}
-.b-images-actions {
-	display: none;
-	float: right;
-	margin: 8px 2px;
-}
-.b-images.m-active .b-images-actions {
-	display: block;
-}
-.b-images-number {
-	display: inline-block;
-	margin-right: 4px;
-	min-width: 28px;
-	line-height: 28px;
-	text-align: center;
-	background: #ddd;
-	border-radius: 4px;
-}
-.b-images-list {
-	display: inline;
-	margin: 0;
-	padding: 0;
-}
-.b-images-list > * {
-	position: relative;
-	margin-right: 3px;
-	margin-bottom: 3px;
-}
-.b-images-list img {
-	display: block;
-}
-
-.b-images-list .selected {
-	background: #36c;
-	outline: 3px solid #36c;
-}
-.b-images-list .selected img {
-	opacity: .7;
-}
-.b-images.m-active .b-images-list .m-cursor {
-	position: relative;
-	background: #6cf;
-	outline: 5px solid #6cf;
-	z-index: 1;
-}
-.b-images-list .m-showInGallery {
-	overflow: hidden;
-	position: relative;
-	display: block;
-	min-width: 25px;
-	height: 120px;
-	background: #ddd;
-}
-.b-images-list .m-showInGallery:before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	box-shadow: 0 0 10px rgba(0,0,0,.5) inset;
-}
-.b-images-list .m-showInGallery:after {
-	content: attr(data-galleries);
-	display: block;
-	position: absolute;
-	padding: 5px 8px;
-	padding-right: 26px;
-	bottom: -22px;
-	left: 0;
-	right: 0;
-	font-size: 12px;
-	color: white;
-	background: rgba(0,0,0,.5);
-	opacity: 0;
-}
-.b-images-list li:hover .m-showInGallery:before {
-	transition: opacity .5s;
-	opacity: 0;
-}
-.b-images-list li:hover .m-showInGallery:after {
-	transition: bottom 300ms, opacity 700ms;
-	transition-delay: 500ms;
-	bottom: 0;
-	opacity: 1;
-}
-.b-images-list .m-similar {
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 24px;
-	height: 24px;
-	line-height: 24px;
-	font-size: 18px;
-	text-align: center;
-	color: white;
-	/*background: rgba(0,0,0,.5);*/
-	opacity: 0;
-	text-shadow: 0 0 2px black;
-	z-index: 2;
-}
-.b-images-list .m-similar:after {
-	content: '\223C';
-}
-.b-images-list li:hover .m-similar {
-	transition: opacity 200ms;
-	opacity: 1;
-}
-.b-images-list li .m-similar:hover {
-	background: rgba(0,0,0,.5);
-	transition: background 500ms;
-	border-left: 1px solid rgba(255,255,255,.5);
-	border-bottom: 1px solid rgba(255,255,255,.5);
-	border-bottom-left-radius: 2px;
-}
-.b-images-list .m-update {
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	width: 24px;
-	height: 24px;
-	line-height: 24px;
-	font-size: 18px;
-	text-align: center;
-	color: white;
-	opacity: 0;
-	z-index: 2;
-}
-.b-images-list .m-update:after {
-	content: '\270E';
-}
-.b-images-list li:hover .m-update {
-	transition: opacity 300ms;
-	opacity: 1;
-}
-
-.b-pages-item {
-	position: relative;
-}
-
-.m-moreImages {
-	display: inline-block;
-	vertical-align: top;
-	padding: 50px 0;
-	width: 120px;
-	height: 20px;
-	line-height: 20px;
-	text-align: center;
-	color: #777;
-	background: #ccc;
-	box-shadow: inset 0 0 10px #999;
-}
-.m-moreImages:hover {
-	color: #666;
-	box-shadow: none;
-}
-
-.modal-wrap {
-	padding: 12px;
-}
-.modal-window {
-	padding: 4px;
-	background: #666;
-}
-.modal-window .gallery {
-	margin: 0;
-	width: 900px;
-	background: transparent;
-}
-.modal-window .gallery .image-wrap {
-	height: 605px;
-	background: #333;
-}
-.modal-window .gallery .thumbs-wrap {
-	height: 108px;
-}
-.modal-window .gallery .thumbs-block {
-	background: transparent;
-}
-.modal-window .gallery .thumbs-list {
-	width: 90000px;
-}
-.modal-window .gallery .thumbs-list a img {
-	border-color: #888;
-	border-radius: 2px;
-}
-.modal-window .gallery .thumbs-list a:hover img {
-	border-color: #bbb;
-}
-.modal-window .gallery .thumbs-list a.active img {
-	border-color: white;
-}
-.modal-window .gallery .thumbs-list a.active:before {
-	border-bottom-color: white;
-}
-
-.b-dropmenu {
-	display: none;
-	position: absolute;
-	z-index: 10;
-	margin-top: 9px;
-	background: white;
-	border: 1px solid #999;
-	box-shadow: 0 2px 4px rgba(0,0,0,.5);
-}
-.b-dropmenu ul {
-	margin: 0;
-	padding: 8px 0;
-	list-style: none;
-}
-.b-dropmenu a {
-	display: block;
-	padding: 4px 10px;
-	padding-right: 20px;
-	color: #333;
-}
-.b-dropmenu a:focus,
-.b-dropmenu a:hover {
-	color: black;
-	background: #ddd;
-}
-
-.b-updateControl {
-	display: none;
-	position: absolute;
-	z-index: 10;
-	margin-top: 3px;
-	padding: 8px 16px;
-	min-width: 150px;
-	background: white;
-	border: 1px solid #999;
-	box-shadow: 0 2px 4px rgba(0,0,0,.5);
-}
-.b-updateControl.show {
-	display: block;
-}
-.b-updateControl:before {
-	content: '';
-	position: absolute;
-	top: -18px;
-	left: 4px;
-	border: 9px solid transparent;
-	border-bottom-color: #999; 
-}
-.b-updateControl:after {
-	content: '';
-	position: absolute;
-	top: -16px;
-	left: 5px;
-	border: 8px solid transparent;
-	border-bottom-color: white; 
-}
-.b-updateControl .closeButton {
-	position: absolute;
-	top: 4px;
-	right: 4px;
-	width: 16px;
-	height: 16px;
-	line-height: 16px;
-	text-align: center;
-	color: #999;
-}
-.b-updateControl .closeButton:after {
-	content: '\2716';
-}
-.b-updateControl .checkboxes {
-	-webkit-columns: 2 90px;
-	-moz-columns: 2 90px;
-	columns: 2 90px;
-}
-.b-updateControl .checkboxes label:hover {
-	background: #eee;
-}
+@import url(jquery.modalWindow.css);
+@import url(jquery.thumbsSlider.css);
+@import url(jquery.gallery.css);
+@import url(gallery.custom.css);
+@import url(jquery.modalGallery.css);
+@import url(base.css);
+@import url(sidebar.css);
+@import url(pages.css);
+@import url(images.css);
+@import url(dropmenu.css);
+@import url(updateControl.css);
